WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278451
REGRESSION(
282416@main
): [GTK][WPE] GPU process crashes in PlatformDisplay::shared()
https://bugs.webkit.org/show_bug.cgi?id=278451
Summary
REGRESSION(282416@main): [GTK][WPE] GPU process crashes in PlatformDisplay::s...
Carlos Garcia Campos
Reported
2024-08-20 23:38:40 PDT
Since
282416@main
that PlatformDisplay needs to be explicitly initialized and the GPU process isn't supposed to use PlatformDisplay (yet) so it doesn't initialize it (yest). But GraphicsContextGLGBM creates a fence in prepareForDisplay() and GLFence uses PlatformDisplay. For now we can remove the fence since it's unused.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2024-08-20 23:44:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32517
EWS
Comment 2
2024-08-21 01:55:37 PDT
Committed
282552@main
(32015b7f049e): <
https://commits.webkit.org/282552@main
> Reviewed commits have been landed. Closing PR #32517 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug