Cherry-pick 282552@main (32015b7f049e). https://bugs.webkit.org/show_bug.cgi?id=278451

REGRESSION(282416@main): [GTK][WPE] GPU process crashes in PlatformDisplay::shared()
    https://bugs.webkit.org/show_bug.cgi?id=278451

    Reviewed by Miguel Gomez.

    Since 282416@main the PlatformDisplay needs to be explicitly
    initialized and the GPU process isn't supposed to use PlatformDisplay
    (yet) so it doesn't initialize it (yet). But GraphicsContextGLGBM
    creates a fence in prepareForDisplay() and GLFence uses PlatformDisplay.
    For now we can remove the fence when GPU process is enabled since it's unused.

    * Source/WebCore/platform/graphics/gbm/GraphicsContextGLGBM.cpp:
    (WebCore::GraphicsContextGLGBM::prepareForDisplay):
    * Source/WebCore/platform/graphics/gbm/GraphicsContextGLGBM.h:

    Canonical link: https://commits.webkit.org/282552@main