Source/WebCore/platform/graphics/gbm/GraphicsContextGLGBM.cpp
@@ -104,7 +104,9 @@ void GraphicsContextGLGBM::prepareForDisplay()
     m_swapchain.displayBO = WTFMove(m_swapchain.drawBO);
     allocateDrawBufferObject();
 
+#if USE(ANGLE_GBM)
     m_frameFence = GLFence::create();
+#endif
 }
 
 bool GraphicsContextGLGBM::platformInitializeContext()
